# FragFM

./: LICENSE  README.md  environment.yaml  pyproject.toml
cfgs/generate/: guacamol.yaml  moses.yaml  moses_logp.yaml  npgen.yaml  zinc250k.yaml
cfgs/train_ae/: moses.yaml
cfgs/train_disc/: moses_logp.yaml
cfgs/train_flow/: moses.yaml
docs/: README.md  index.html
docs/static/css/: index.css
docs/static/js/: index.js
exe/: eval_ae.py  generate.py  train_ae.py  train_disc.py  train_flow.py
fragfm/: dataset.py  disc_dataset.py  distort_scheduler.py  genererate_utils.py  mol_generator.py  process.py  rBRICS_public.py
fragfm/model/: ae.py  disc.py  flow.py  gt_digress.py  layer.py  mpnn.py
fragfm/utils/: file.py  graph_ops.py  mat_ops.py  mol_decompose_ops.py  mol_ops.py
npgen-benchmark/: environment.yml  index_v1.json  pixi.toml  setup.py
npgen-benchmark/baselines/: defog.smi  digress.smi  fragfm.smi  graphaf.smi  hiervae.smi  jtvae.smi  molhf.smi  safegpt.smi
npgen-benchmark/npgenbenchmark/: classifier.py  dataset.py  main.py  utils.py
npgen-benchmark/test/: answer.csv  samples.csv  test_benchmark.py
process/: process_all_data.sh  process_fragment_from_lmdb.py  process_merge_lmdbs.py  process_to_lmdb.py
